# qt6-layer-shell

./: CMakeLists.txt  LayerShellQtConfig.cmake.in
debian/: control  liblayershellqtinterface6-dev.install  liblayershellqtinterface6.install  qml6-module-layershell.install  qt6-layer-shell.install
src/: CMakeLists.txt
src/declarative/: CMakeLists.txt  layershellqtplugin.cpp
